--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -1,7 +1,7 @@
 {
   "generator-backbone": {
     "appPath": "app",
-    "appName": "YoBackbone",
+    "appName": "YandexTest",
     "coffee": false,
     "testFramework": "mocha",
     "templateFramework": "lodash",
